@@ -120,6 +120,7 @@
 * Add alternate spelling for Vietnam [jcreiff] #5386
 * Checkout v2: add l2/l3 [gasb150] #5385
 * Worldpay: Update passing 3DS data for NT [almalee24] #5389
+* Ebanx: Add the merchant_payment_code override [yunnydang] #5394
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
